<resources>
    <string name="name_isport">Crivit Pro Bike Assistant</string>
    <string name="name_craig">Craig Tracker</string>
    <string name="name_go_activity">Go Activity</string>
    <string name="name_ready">Ready For Fitness</string>
    <string name="all_return_back">back</string>
    <string name="action_settings">Settings</string>
    <string name="menu_main_exit">And then press a return button to exit the application</string>
    <string name="exercise_trend1">Monday</string>
    <string name="exercise_trend2">Tuesday</string>
    <string name="exercise_trend3">Wednesday</string>
    <string name="exercise_trend4">Thursday</string>
    <string name="exercise_trend5">Friday</string>
    <string name="exercise_trend6">Saturday</string>
    <string name="exercise_trend7">Sunday</string>
    <string name="back">back</string>
<string name="exercise_no_value">No record~</string>
    <string name="clock_title">Alarm reminder</string>
    <string name="update_version_title">Software Update</string>
    <string name="update_version_content">Find the new version, be sure to update?</string>
    <string name="update_version_ok">Update</string>
    <string name="update_version_cancle">Update later</string>
    <string name="manage_device_cant_conn_blue">Your device not support Bluetooth 4.0!</string>
    <string name="manage_device_title">Paired with hardware</string>
    <string name="light_screen">please light up the screen</string>
    <string name="user_info_title">Personal Details</string>
    <string name="user_info_nick_title">Nickname</string>
    <string name="user_info_image_title">Photo</string>
    <string name="complete_user_info_hint_nick_name">Choose a nickname</string>
    <string name="set_user_info_sex_title">Gender</string>
    <string name="set_user_info_birthday_title">Age</string>
    <string name="set_user_info_height_title">Height</string>
    <string name="set_user_info_weight_title">Weight</string>
    <string name="complete_user_info_default_age">30</string>
    <string name="user_info_man">Male</string>
    <string name="user_info_woman">Female</string>
    <string name="left_hand">Left hand</string>
    <string name="right_hand">Right hand</string>
    <string name="complete_user_info_default_age_unit"></string>
    <string name="complete_user_info_default_day_target_step">K steps per day</string>
    <string name="complete_user_info_default_height">170</string>
    <string name="complete_user_info_default_height_unit">cm</string>
    <string name="complete_user_info_default_weight">65</string>
    <string name="complete_user_info_default_weight_unit">kg</string>
    <string name="user_info_take_photo_text">take a picture</string>
    <string name="user_info_browsing_text">Choose from the album </string>
    <string name="user_info_cancle">Cancel</string>
    <string name="user_info_done">Confirm</string>
    <string name="user_info_no_sd_card">The storage card is not found, unable to store photos！</string>
    <string name="user_info_set_age_title">Age Setting</string>
    <string name="set_target_title">Set daily goals</string>
    <string name="user_info_set_height_title">Height Setting</string>
    <string name="user_info_set_weight_title">Weight Setting</string>
    <string name="user_info_set_sex">Gender Setting</string>
    <string name="header_hint_refresh_normal">Please press device button to sync data. </string>
    <string name="header_hint_refresh_ready">Please press device button to sync data. </string>
    <string name="header_hint_refresh_loading">Synchronizing&#8230;</string>
    <string name="footer_hint_load_normal">Load more</string>
    <string name="footer_hint_load_ready">Release to load more</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="event">Affairs</string>
    <string name="EVENT">AFFAIR</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="save">Save</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="ok">Determine</string>
    <string name="alarm_clock_set_successfully">alarm clock set successfully</string>
    <string name="alarm_clock_set_failed">alarm clock set failed</string>
    <string name="binding_is_successful">successfully binded！</string>
    <string name="binding_is_fail">Paired is failed！</string>
    <string name="no_device">no device found</string>
    <string name="Successfully_deleted">Successfully deleted！</string>
    <string name="steps_day">Steps</string>
    <string name="user_information">User info</string>
    <string name="About_us">About us</string>
    <string name="Version">Version</string>
    <string name="disconnect">disconnect</string>
    <string name="connect">connect</string>
    <string name="unbind_success">Unpair success！</string>
    <string name="connection_successful">connection successful！</string>
    <string name="setting">Settings</string>
    <string name="device">Device</string>
    <string name="daily_goal">Daily Goals</string>
    <string name="defalt_step">7000 Steps</string>
    <string name="step_length">Stride Length</string>
    <string name="wear_way">Wearing info</string>
    <string name="sedentary_reminder">Sedentary Remind</string>
    <string name="vibration_alarm_clock">Vibration Alarm</string>
    <string name="restore_default_settings">Reset All Settings</string>
    <string name="unbind">Unpair</string>
    <string name="real_time_synchronization">Real-time synchronization</string>
    <string name="Detailed">Details</string>
    <string name="mark">Mark</string>
    <string name="Remind">Remind</string>
    <string name="Switch">On-Off</string>
    <string name="no_movement_time">minutes without exercise</string>
    <string name="start_time">Beginning Time</string>
    <string name="end_time">Ending Time</string>
    <string name="refresh">Refresh</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="ignore_equipment">Ignore the device</string>
    <string name="binding_equipment">Bind the device</string>
    <string name="device_id">Device ID</string>
    <string name="device_name">Device name</string>
    <string name="Connected">"    Connected"</string>
    <string name="please_wait">Please Wait</string>
    <string name="successful_synchronization">Data sync complete</string>
    <string name="synchronization_failure">Data sync failed</string>
    <string name="setting_wear_way">Wearing Info Setting</string>
    <string name="set_the_pace">Stride Setting</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="target_8_hours">target for 8 hours</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="set_metric">MM/INCH</string>
    <string name="metric">Metric</string>
    <string name="Inch">Imperial</string>
    <string name="clear_data_seccess">Clear Data Seccess</string>
    <string name="setting_seccess">Setting Seccess</string>
    <string name="one_week">1Week</string>
    <string name="two_week">2Week</string>
    <string name="three_week">3Week</string>
    <string name="four_week">4Week</string>
    <string name="five_week">5Week</string>
    <string name="six_week">6Week</string>
    <string name="seven_week">7Week</string>
    <string name="eight_week">8Week</string>
    <string name="nine_week">9Week</string>
    <string name="ten_week">10Week</string>
    <string name="eleven_week">11Week</string>
    <string name="twelve_week">12Week</string>
    <string name="thirteen_week">13Week</string>
    <string name="fourteen_week">14Week</string>
    <string name="fifteen_week">15Week</string>
    <string name="sixteen_week">16Week</string>
    <string name="seventeen_week">17Week</string>
    <string name="eighteen_week">18Week</string>
    <string name="nineteen_week">19Week</string>
    <string name="twenty_week">20Week</string>
    <string name="twenty_one_week">21Week</string>
    <string name="twenty_two_week">22Week</string>
    <string name="twenty_three_week">23Week</string>
    <string name="twenty_four_week">24Week</string>
    <string name="twenty_five_week">25Week</string>
    <string name="twenty_six_week">26Week</string>
    <string name="twenty_seven_week">27Week</string>
    <string name="twenty_seven_eight_week">28Week</string>
    <string name="twenty_seven_nine_week">29Week</string>
    <string name="thirty_week">30Week</string>
    <string name="thirty_one_week">31Week</string>
    <string name="thirty_two_week">32Week</string>
    <string name="thirty_three_week">33Week</string>
    <string name="thirty_four_week">34Week</string>
    <string name="thirty_five_week">35Week</string>
    <string name="thirty_six_week">36Week</string>
    <string name="thirty_seven_week">37Week</string>
    <string name="thirty_eight_week">38Week</string>
    <string name="thirty_nine_week">39Week</string>
    <string name="forty_week">40Week</string>
    <string name="forty_one_week">41Week</string>
    <string name="forty_two_week">42Week</string>
    <string name="forty_three_week">43Week</string>
    <string name="forty_four_week">44Week</string>
    <string name="forty_five_week">45Week</string>
    <string name="forty_six_week">46Week</string>
    <string name="forty_seven_week">47Week</string>
    <string name="forty_eight_wek">48Week</string>
    <string name="forty_nine_week">49Week</string>
    <string name="fifty_week">50Week</string>
    <string name="fifty_one_week">51Week</string>
    <string name="fifty_two_week">52Week</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="set_personal_data">Set Personal Data</string>
    <string name="confirm">Apply</string>
</resources>