<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/return_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/all_return_back_bg" >

            <ImageView
                android:id="@+id/return_back_icon"
                style="@style/return_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/ic_launcher"
                android:src="@drawable/return_back_on" />

            <TextView
                android:id="@+id/walknote_icon"
                style="@style/return_back_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/return_back_icon"
                android:text="@string/all_return_back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title_name"
            style="@style/return_title_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/manage_device_title" />
        
        
    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#aaaaaa"/>
    <LinearLayout 
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="45dp"
        android:background="#ffffff">
        
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="match_parent"
            android:text="@string/device_id"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"/>
        
        <TextView 
            android:id="@+id/unbind_device_mac"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="#000000" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="45dp"
        android:background="#ffffff">
        
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="match_parent"
            android:text="@string/device_name"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"/>
        
        <TextView 
            android:id="@+id/unbind_device_name"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:textColor="#000000" />
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#aaaaaa" />
    <Button
        android:id="@+id/connect_device"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_device_all_btn"
        android:text="@string/connect"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#aaaaaa" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="#aaaaaa" />
    <Button
        android:id="@+id/unbind_device_unbind"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_device_all_btn"
        android:text="@string/unbind"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#aaaaaa" />

</LinearLayout>
