<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff" >

        <RelativeLayout
            android:id="@+id/return_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/all_return_back_bg" >

            <ImageView
                android:id="@+id/return_back_icon"
                style="@style/return_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@drawable/ic_launcher"
                android:src="@drawable/return_back_on" />

            <TextView
                android:id="@+id/walknote_icon"
                style="@style/return_back_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/return_back_icon"
                android:text="@string/all_return_back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title_name_menu_main"
            style="@style/return_title_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/manage_device_title" />
        
        <TextView 
            android:id="@+id/manage_device_fresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/refresh"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            style="@style/return_title_name"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="45dp"
        android:background="#aaaaaa" />

    <ProgressBar
        android:id="@+id/manage_device_fresh_bar"
        style="@style/manage_device_fresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@drawable/ic_launcher" 
        android:visibility="gone"/>
    
    <TextView
        android:id="@+id/text_no_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_device"
        android:textColor="@android:color/darker_gray"
        android:textSize="15dp"
        android:visibility="gone" />
    

    <ListView
        android:id="@+id/manage_device_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:layout_marginTop="46dp"
        android:divider="#aaaaaa"
        android:visibility="gone"
        android:dividerHeight="1px" />

</FrameLayout>